# galactic-dynamics-bt

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: WORKFLOW_DEPENDENCIES.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
docs/: chapter01.1.md  chapter01.2.md  chapter01.md  chapter02-multipole.md  chapter02.1.md  chapter02.2.md  chapter02.3.md  chapter03-bifurcation.md  chapter03-surfaces-of-section.md  index.md  refs.bib
docs/javascripts/: mathjax.js
docs/stylesheets/: galactic-theme.css
galactic_dynamics_bt/: __init__.py  source.py
galactic_dynamics_bt/chapter01/: __init__.py  frw_model.py  sersic_profile.py  universe_age.py
galactic_dynamics_bt/chapter02/: __init__.py  exponential_disk.py  multipole_expansion.py
galactic_dynamics_bt/chapter03/: __init__.py  bifurcation.py  logarithmic_potential.py  surface_of_section.py  symplectic_integrators.py
galactic_dynamics_bt/utils/: __init__.py  assets.py
scripts/: check-release.sh  generate_assets.py  run_affected_tests.py
src/: __init__.py
src/chapter01/: frw_model.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/galactic_dynamics_bt/chapter01/: __init__.py  test_frw_model.py  test_sersic_profile.py  test_universe_age.py
tests/unit/galactic_dynamics_bt/chapter02/: __init__.py  test_exponential_disk.py  test_multipole_expansion.py
tests/unit/galactic_dynamics_bt/chapter03/: __init__.py  test_bifurcation.py  test_logarithmic_potential.py  test_surface_of_section.py  test_symplectic_integrators.py
tests/unit/galactic_dynamics_bt/utils/: test_assets.py
